--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@clerk/backend": "^2.16.0",
+    "@clerk/backend": "2.16.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
