--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@clerk/backend": "2.16.0",
+    "@supabase/supabase-js": "^2.39.0",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "svix": "^1.15.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
