--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@clerk/backend": "2.16.0",
+    "@clerk/nextjs": "^6.35.5",
+    "@phosphor-icons/react": "^2.1.10",
     "@supabase/supabase-js": "^2.39.0",
+    "framer-motion": "^12.23.24",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
