--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@clerk/nextjs": "^6.35.5",
     "@phosphor-icons/react": "^2.1.10",
     "@supabase/supabase-js": "^2.39.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.555.0",
+    "motion": "^12.23.24",
     "next": "15.5.7",
     "react": "19.1.2",
     "react-dom": "19.1.2",
-    "svix": "^1.15.0"
+    "svix": "^1.15.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -27,7 +32,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.7",
+    "shadcn": "^3.5.1",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
