--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@clerk/backend": "2.16.0",
     "@clerk/nextjs": "^6.35.5",
     "@phosphor-icons/react": "^2.1.10",
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.39.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
-    "lucide-react": "^0.555.0",
-    "motion": "^12.23.24",
     "next": "15.5.9",
     "react": "19.1.2",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.1.2",
     "svix": "^1.15.0",
     "tailwind-merge": "^3.4.0"
@@ -34,7 +35,6 @@
     "eslint-config-next": "15.5.7",
     "shadcn": "^3.5.1",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
