--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.562.0",
     "next": "15.5.9",
     "react": "19.1.2",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.1.2",
+    "recharts": "^3.6.0",
     "svix": "^1.15.0",
     "tailwind-merge": "^3.4.0"
   },
